# custom-variant

./: CMakeLists.txt
src/: error.hpp  main.cpp  tests.cpp  variant.hpp
